[package]
name = "mojang-api"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
image = "0.25.6"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
