[package]
name = "mojang-api-wrapper"
version = "0.1.0"
edition = "2024"
authors = ["STierProgrammer"]
description = "Rust wrapper for the official Mojang API "
repository = "https://github.com/SynthLauncher/mojang-api-wrapper"
license = "MIT"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
image = { version = "0.25.6" }
